[gd_scene load_steps=33 format=4 uid="uid://x5u52o5tm254"]

[ext_resource type="Script" uid="uid://cp54mgi54nywo" path="res://scenes/game_logic/fill_game_logic.gd" id="1_eelkn"]
[ext_resource type="Script" uid="uid://d388w3tqblqi0" path="res://scenes/quests/story_quests/grace/2_grace_combat/grace_neuronnetwork.gd" id="1_xa383"]
[ext_resource type="Resource" uid="uid://3vrn5jdxov37" path="res://scenes/quests/story_quests/template/2_template_combat/template_combat_components/template_combat.dialogue" id="2_qr65d"]
[ext_resource type="TileSet" uid="uid://07fq3rspk8ia" path="res://scenes/tileset.tres" id="3_8p2v0"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="4_56ds5"]
[ext_resource type="Texture2D" uid="uid://dbi8tqapp8dat" path="res://scenes/quests/story_quests/grace/2_grace_combat/Axon.png" id="4_n3arn"]
[ext_resource type="PackedScene" uid="uid://b82nsrh332syj" path="res://scenes/game_elements/characters/enemies/throwing_enemy/throwing_enemy.tscn" id="5_kukhv"]
[ext_resource type="Texture2D" uid="uid://cwyl8oehj0gpq" path="res://scenes/quests/story_quests/grace/2_grace_combat/Dendritis.png" id="5_vi1kf"]
[ext_resource type="PackedScene" uid="uid://y8ha8abfyap2" path="res://scenes/game_elements/props/filling_barrel/filling_barrel.tscn" id="6_m74a1"]
[ext_resource type="Texture2D" uid="uid://dxg80h0ek522w" path="res://scenes/quests/story_quests/grace/2_grace_combat/Cellbody.png" id="6_xa383"]
[ext_resource type="SpriteFrames" uid="uid://c50725q5ey5j5" path="res://scenes/quests/story_quests/template/2_template_combat/template_combat_components/template_target_spriteframes.tres" id="7_5ums6"]
[ext_resource type="PackedScene" uid="uid://fuhl3l6gxq5k" path="res://scenes/game_elements/props/collectible_item/collectible_item.tscn" id="8_54xi1"]
[ext_resource type="Texture2D" uid="uid://dab0uhlmqalwh" path="res://scenes/quests/story_quests/grace/2_grace_combat/New Piskel (2).png" id="8_80m17"]
[ext_resource type="Script" uid="uid://bgmwplmj3bfls" path="res://scenes/globals/game_state/inventory/inventory_item.gd" id="9_brevl"]
[ext_resource type="Texture2D" uid="uid://dotw0q510u6ni" path="res://scenes/quests/story_quests/grace/2_grace_combat/New Piskel (1).png" id="9_r35tm"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="10_7afs2"]
[ext_resource type="Texture2D" uid="uid://b6w6fddedvetc" path="res://scenes/quests/story_quests/grace/2_grace_combat/New Piskel (3).png" id="10_tmgji"]
[ext_resource type="Script" uid="uid://q8tpboo4xm00" path="res://scenes/quests/story_quests/grace/2_grace_combat/signal.gd" id="12_htxr6"]
[ext_resource type="Texture2D" uid="uid://b6eoy8un7xoqp" path="res://assets/third_party/tiny-swords/UI/Buttons/Button_Red.png" id="20_nd32y"]
[ext_resource type="Texture2D" uid="uid://ddofc4v1akfpw" path="res://assets/third_party/tiny-swords/UI/Buttons/Button_Red_Pressed.png" id="21_fs2xd"]
[ext_resource type="Script" uid="uid://diknsuw3mtj1n" path="res://scenes/game_elements/props/decoration/decoration.gd" id="22_r35tm"]
[ext_resource type="Texture2D" uid="uid://cyvi71ryavsld" path="res://scenes/game_elements/props/decoration/books/components/Books_2.png" id="23_tmgji"]
[ext_resource type="Texture2D" uid="uid://b65dg7i548oip" path="res://scenes/game_elements/props/decoration/books/components/Books_1.png" id="24_baejh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_51cst"]
texture = ExtResource("4_n3arn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w0med"]
texture = ExtResource("5_vi1kf")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l1e7i"]
texture = ExtResource("6_xa383")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wsh0r"]
texture = ExtResource("8_80m17")
1:1/0 = 0
2:1/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_03pi1"]
texture = ExtResource("9_r35tm")
1:1/0 = 0
2:1/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ttvei"]
texture = ExtResource("10_tmgji")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
1:3/0 = 0
2:3/0 = 0

[sub_resource type="TileSet" id="TileSet_htxr6"]
sources/0 = SubResource("TileSetAtlasSource_51cst")
sources/1 = SubResource("TileSetAtlasSource_w0med")
sources/2 = SubResource("TileSetAtlasSource_l1e7i")
sources/3 = SubResource("TileSetAtlasSource_wsh0r")
sources/4 = SubResource("TileSetAtlasSource_03pi1")
sources/5 = SubResource("TileSetAtlasSource_ttvei")

[sub_resource type="Resource" id="Resource_a51xm"]
script = ExtResource("9_brevl")
name = ""
type = 1
metadata/_custom_type_script = "uid://bgmwplmj3bfls"

[sub_resource type="CircleShape2D" id="CircleShape2D_nig86"]
radius = 22.0

[node name="Combat" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xa383")

[node name="FillGameLogic" type="Node" parent="."]
script = ExtResource("1_eelkn")
intro_dialogue = ExtResource("2_qr65d")
metadata/_custom_type_script = "uid://cp54mgi54nywo"

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="Grass" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAANAAcAEAAAAAAAAAANAAIAEAAAAAAAAAANAAEACQABAAEAAAAMAAUAEAAAAAAAAAAMAAQAEAAAAAAAAAAMAAIAEAAAAAAAAAAMAAEACQABAAEAAAALAAYAEAAAAAAAAAALAAUAEAAAAAAAAAALAAQAEAAAAAAAAAALAAEACQABAAEAAAAKAAYAEAAAAAAAAAAKAAUAEAAAAAAAAAAKAAQAEAAAAAAAAAAKAAMAEAAAAAAAAAAKAAEACQABAAEAAAAJAAUAEAAAAAAAAAAJAAQAEAAAAAAAAAAJAAMAEAAAAAAAAAAJAAEACQABAAEAAAAIAAcAEAAAAAAAAAAIAAUAEAAAAAAAAAAIAAQAEAAAAAAAAAAIAAMAEAAAAAAAAAAIAAEACQABAAEAAAAHAAcAEAAAAAAAAAAHAAUAEAAAAAAAAAAHAAQAEAAAAAAAAAAHAAMAEAAAAAAAAAAHAAEACQABAAEAAAAGAAcAEAAAAAAAAAAGAAUAEAAAAAAAAAAGAAQAEAAAAAAAAAAGAAMAEAAAAAAAAAAFAAcAEAAAAAAAAAAFAAUAEAAAAAAAAAAFAAQAEAAAAAAAAAAFAAMAEAAAAAAAAAAFAAEACQABAAEAAAAEAAcAEAAAAAAAAAAEAAYAEAAAAAAAAAAEAAUAEAAAAAAAAAAEAAQAEAAAAAAAAAAEAAEACQABAAEAAAADAAcAEAAAAAAAAAADAAUAEAAAAAAAAAADAAEACQABAAEAAAACAAcAEAAAAAAAAAACAAYAEAAAAAAAAAACAAUAEAAAAAAAAAACAAEACQABAAEAAAABAAcAEAAAAAAAAAABAAYAEAAAAAAAAAABAAUAEAAAAAAAAAABAAMAEAAAAAAAAAABAAEACQABAAEAAAACAAQAEAAAAAAAAAABAAQAEAAAAAAAAAAAAAQACQABAAEAAAAAAAUACQABAAEAAAAAAAYACQABAAEAAAAAAAcACQABAAEAAAAGAAAACQABAAEAAAAGAAEACQABAAEAAAAHAAAACQABAAEAAAAFAAAACQABAAEAAAAIAAAACQABAAEAAAAJAAAACQABAAEAAAALAAAACQABAAEAAAAMAAAACQABAAEAAAAKAAAACQABAAEAAAANAAAACQABAAEAAAAEAAAACQABAAEAAAADAAAACQABAAEAAAACAAAACQABAAEAAAABAAAACQABAAEAAAAAAAAACQABAAEAAAAAAAEACQABAAEAAAAAAAIACQABAAEAAAAAAAMACQABAAEAAAAAAAgACQABAAEAAAABAAgACQABAAEAAAACAAgAEAAAAAAAAAADAAgAEAAAAAAAAAAEAAgAEAAAAAAAAAAFAAgACQABAAEAAAAGAAgACQABAAEAAAAHAAgACQABAAEAAAAIAAgACQABAAEAAAAJAAgACQABAAEAAAAKAAgACQABAAEAAAAMAAgACQABAAEAAAALAAgACQABAAEAAAANAAgACQABAAEAAAAOAAgACQABAAEAAAAOAAcACQABAAEAAAAOAAYACQABAAEAAAAOAAUACQABAAEAAAAOAAQACQABAAEAAAAOAAMACQABAAEAAAAOAAIACQABAAEAAAAOAAEACQABAAEAAAAOAAAACQABAAEAAAADAAkAEAAAAAAAAAADAAoAEAAAAAAAAAACAAoAEAAAAAAAAAACAAkAEAAAAAAAAAAEAAkAEAAAAAAAAAAEAAoAEAAAAAAAAAACAAsAEAAAAAAAAAADAAsAEAAAAAAAAAAEAAsAEAAAAAAAAAACAAwAEAAAAAAAAAADAAwAEAAAAAAAAAAEAAwAEAAAAAAAAAACAA0AEAAAAAAAAAADAA0AEAAAAAAAAAAEAA0AEAAAAAAAAAABAAIAEAAAAAAAAAACAAIAEAAAAAAAAAADAAIAEAAAAAAAAAAEAAIAEAAAAAAAAAAFAAIAEAAAAAAAAAAGAAIAEAAAAAAAAAAHAAIAEAAAAAAAAAAIAAIAEAAAAAAAAAAJAAIAEAAAAAAAAAAKAAIAEAAAAAAAAAALAAIAEAAAAAAAAAANAAMAEAAAAAAAAAANAAQAEAAAAAAAAAANAAUAEAAAAAAAAAANAAYAEAAAAAAAAAAMAAcAEAAAAAAAAAALAAcAEAAAAAAAAAAKAAcAEAAAAAAAAAAJAAcAEAAAAAAAAAADAAYAEAAAAAAAAAACAAMAEAAAAAAAAAAFAAYAEAAAAAAAAAAGAAYAEAAAAAAAAAAHAAYAEAAAAAAAAAAIAAYAEAAAAAAAAAAJAAYAEAAAAAAAAAAMAAYAEAAAAAAAAAAMAAMAEAAAAAAAAAALAAMAEAAAAAAAAAAAAP7/DAABAAEAAAAAAP//DAABAAEAAAABAP7/DAABAAEAAAABAP//DAABAAEAAAACAP7/DAABAAEAAAACAP//DAABAAEAAAADAP7/DAABAAEAAAADAP//DAABAAEAAAAEAP7/DAABAAEAAAAEAP//DAABAAEAAAAFAP7/DAABAAEAAAAFAP//DAABAAEAAAAGAP7/DAABAAEAAAAGAP//DAABAAEAAAAHAP7/DAABAAEAAAAHAP//DAABAAEAAAAIAP7/DAABAAEAAAAIAP//DAABAAEAAAAJAP7/DAABAAEAAAAJAP//DAABAAEAAAAKAP7/DAABAAEAAAAKAP//DAABAAEAAAALAP7/DAABAAEAAAALAP//DAABAAEAAAAMAP7/DAABAAEAAAAMAP//DAABAAEAAAANAP7/DAABAAEAAAANAP//DAABAAEAAAAOAP7/DAABAAEAAAAOAP//DAABAAEAAAAAAPv/DAABAAEAAAAAAPz/DAABAAEAAAAAAP3/DAABAAEAAAABAPv/DAABAAEAAAABAPz/DAABAAEAAAABAP3/DAABAAEAAAACAPv/DAABAAEAAAACAPz/DAABAAEAAAACAP3/DAABAAEAAAADAPv/DAABAAEAAAADAPz/DAABAAEAAAADAP3/DAABAAEAAAAEAPv/DAABAAEAAAAEAPz/DAABAAEAAAAEAP3/DAABAAEAAAAFAPv/DAABAAEAAAAFAPz/DAABAAEAAAAFAP3/DAABAAEAAAAGAPv/DAABAAEAAAAGAPz/DAABAAEAAAAGAP3/DAABAAEAAAAHAPv/DAABAAEAAAAHAPz/DAABAAEAAAAHAP3/DAABAAEAAAAIAPv/DAABAAEAAAAIAPz/DAABAAEAAAAIAP3/DAABAAEAAAAJAPv/DAABAAEAAAAJAPz/DAABAAEAAAAJAP3/DAABAAEAAAAKAPv/DAABAAEAAAAKAPz/DAABAAEAAAAKAP3/DAABAAEAAAALAPv/DAABAAEAAAALAPz/DAABAAEAAAALAP3/DAABAAEAAAAMAPv/DAABAAEAAAAMAPz/DAABAAEAAAAMAP3/DAABAAEAAAANAPv/DAABAAEAAAANAPz/DAABAAEAAAANAP3/DAABAAEAAAAOAPv/DAABAAEAAAAOAPz/DAABAAEAAAAOAP3/DAABAAEAAAAPAPv/DAABAAEAAAAPAPz/DAABAAEAAAAPAP3/DAABAAEAAAAPAP7/DAABAAEAAAAPAP//DAABAAEAAAAPAAAADAABAAEAAAAPAAEADAABAAEAAAAPAAIADAABAAEAAAAPAAMADAABAAEAAAAPAAQADAABAAEAAAAPAAUADAABAAEAAAAQAPv/DAABAAEAAAAQAPz/DAABAAEAAAAQAP3/DAABAAEAAAAQAP7/DAABAAEAAAAQAP//DAABAAEAAAAQAAAADAABAAEAAAAQAAEADAABAAEAAAAQAAIADAABAAEAAAAQAAMADAABAAEAAAAQAAQADAABAAEAAAAQAAUADAABAAEAAAARAPv/DAABAAEAAAARAPz/DAABAAEAAAARAP3/DAABAAEAAAARAP7/DAABAAEAAAARAP//DAABAAEAAAARAAAADAABAAEAAAARAAEADAABAAEAAAARAAIADAABAAEAAAARAAMADAABAAEAAAARAAQADAABAAEAAAARAAUADAABAAEAAAASAPv/DAABAAEAAAASAPz/DAABAAEAAAASAP3/DAABAAEAAAASAP7/DAABAAEAAAASAP//DAABAAEAAAASAAAADAABAAEAAAASAAEADAABAAEAAAASAAIADAABAAEAAAASAAMADAABAAEAAAASAAQADAABAAEAAAASAAUADAABAAEAAAATAPv/DAABAAEAAAATAPz/DAABAAEAAAATAP3/DAABAAEAAAATAP7/DAABAAEAAAATAP//DAABAAEAAAATAAAADAABAAEAAAATAAEADAABAAEAAAATAAIADAABAAEAAAATAAMADAABAAEAAAATAAQADAABAAEAAAATAAUADAABAAEAAAAPAAYADAABAAEAAAAPAAcADAABAAEAAAAPAAgADAABAAEAAAAPAAkADAABAAEAAAAPAAoADAABAAEAAAAQAAYADAABAAEAAAAQAAcADAABAAEAAAAQAAgADAABAAEAAAAQAAkADAABAAEAAAAQAAoADAABAAEAAAARAAYADAABAAEAAAARAAcADAABAAEAAAARAAgADAABAAEAAAARAAkADAABAAEAAAARAAoADAABAAEAAAASAAYADAABAAEAAAASAAcADAABAAEAAAASAAgADAABAAEAAAASAAkADAABAAEAAAASAAoADAABAAEAAAATAAYADAABAAEAAAATAAcADAABAAEAAAATAAgADAABAAEAAAATAAkADAABAAEAAAATAAoADAABAAEAAAD8//v/DAABAAEAAAD8//z/DAABAAEAAAD8//3/DAABAAEAAAD8//7/DAABAAEAAAD8////DAABAAEAAAD8/wAADAABAAEAAAD9//v/DAABAAEAAAD9//z/DAABAAEAAAD9//3/DAABAAEAAAD9//7/DAABAAEAAAD9////DAABAAEAAAD9/wAADAABAAEAAAD+//v/DAABAAEAAAD+//z/DAABAAEAAAD+//3/DAABAAEAAAD+//7/DAABAAEAAAD+////DAABAAEAAAD+/wAADAABAAEAAAD///v/DAABAAEAAAD///z/DAABAAEAAAD///3/DAABAAEAAAD///7/DAABAAEAAAD/////DAABAAEAAAD//wAADAABAAEAAAD8/wEADAABAAEAAAD8/wIADAABAAEAAAD8/wMADAABAAEAAAD8/wQADAABAAEAAAD8/wUADAABAAEAAAD8/wYADAABAAEAAAD8/wcADAABAAEAAAD8/wgADAABAAEAAAD9/wEADAABAAEAAAD9/wIADAABAAEAAAD9/wMADAABAAEAAAD9/wQADAABAAEAAAD9/wUADAABAAEAAAD9/wYADAABAAEAAAD9/wcADAABAAEAAAD9/wgADAABAAEAAAD+/wEADAABAAEAAAD+/wIADAABAAEAAAD+/wMADAABAAEAAAD+/wQADAABAAEAAAD+/wUADAABAAEAAAD+/wYADAABAAEAAAD+/wcADAABAAEAAAD+/wgADAABAAEAAAD//wEADAABAAEAAAD//wIADAABAAEAAAD//wMADAABAAEAAAD//wQADAABAAEAAAD//wUADAABAAEAAAD//wYADAABAAEAAAD//wcADAABAAEAAAD//wgADAABAAEAAAD8/wkADAABAAEAAAD8/woADAABAAEAAAD8/wsADAABAAEAAAD9/wkADAABAAEAAAD9/woADAABAAEAAAD9/wsADAABAAEAAAD+/wkADAABAAEAAAD+/woADAABAAEAAAD+/wsADAABAAEAAAD//wkADAABAAEAAAD//woADAABAAEAAAD//wsADAABAAEAAAAAAAkADAABAAEAAAAAAAoADAABAAEAAAAAAAsADAABAAEAAAD8/wwADAABAAEAAAD8/w0ADAABAAEAAAD8/w4ADAABAAEAAAD8/w8ADAABAAEAAAD9/wwADAABAAEAAAD9/w0ADAABAAEAAAD9/w4ADAABAAEAAAD9/w8ADAABAAEAAAD+/wwADAABAAEAAAD+/w0ADAABAAEAAAD+/w4ADAABAAEAAAD+/w8ADAABAAEAAAD//wwADAABAAEAAAD//w0ADAABAAEAAAD//w4ADAABAAEAAAD//w8ADAABAAEAAAAAAAwADAABAAEAAAAAAA0ADAABAAEAAAAAAA4ADAABAAEAAAAAAA8ADAABAAEAAAAFAAoADAABAAEAAAAFAAsADAABAAEAAAAFAAwADAABAAEAAAAFAA0ADAABAAEAAAAFAA4ADAABAAEAAAAGAAoADAABAAEAAAAGAAsADAABAAEAAAAGAAwADAABAAEAAAAGAA0ADAABAAEAAAAGAA4ADAABAAEAAAAHAAoADAABAAEAAAAHAAsADAABAAEAAAAHAAwADAABAAEAAAAHAA0ADAABAAEAAAAHAA4ADAABAAEAAAAIAAoADAABAAEAAAAIAAsADAABAAEAAAAIAAwADAABAAEAAAAIAA0ADAABAAEAAAAIAA4ADAABAAEAAAAJAAoADAABAAEAAAAJAAsADAABAAEAAAAJAAwADAABAAEAAAAJAA0ADAABAAEAAAAJAA4ADAABAAEAAAAKAAoADAABAAEAAAAKAAsADAABAAEAAAAKAAwADAABAAEAAAAKAA0ADAABAAEAAAAKAA4ADAABAAEAAAALAAoADAABAAEAAAALAAsADAABAAEAAAALAAwADAABAAEAAAALAA0ADAABAAEAAAALAA4ADAABAAEAAAAMAAoADAABAAEAAAAMAAsADAABAAEAAAAMAAwADAABAAEAAAAMAA0ADAABAAEAAAAMAA4ADAABAAEAAAANAAoADAABAAEAAAANAAsADAABAAEAAAANAAwADAABAAEAAAANAA0ADAABAAEAAAANAA4ADAABAAEAAAAOAAoADAABAAEAAAAOAAsADAABAAEAAAAOAAwADAABAAEAAAAOAA0ADAABAAEAAAAOAA4ADAABAAEAAAAPAAsADAABAAEAAAAPAAwADAABAAEAAAAPAA0ADAABAAEAAAAPAA4ADAABAAEAAAAQAAsADAABAAEAAAAQAAwADAABAAEAAAAQAA0ADAABAAEAAAAQAA4ADAABAAEAAAARAAsADAABAAEAAAARAAwADAABAAEAAAARAA0ADAABAAEAAAARAA4ADAABAAEAAAASAAsADAABAAEAAAASAAwADAABAAEAAAASAA0ADAABAAEAAAASAA4ADAABAAEAAAATAAsADAABAAEAAAATAAwADAABAAEAAAATAA0ADAABAAEAAAATAA4ADAABAAEAAAABAA4ADAABAAEAAAABAA8ADAABAAEAAAACAA4ADAABAAEAAAACAA8ADAABAAEAAAADAA4ADAABAAEAAAADAA8ADAABAAEAAAAEAA4ADAABAAEAAAAEAA8ADAABAAEAAAAFAA8ADAABAAEAAAAGAA8ADAABAAEAAAAHAA8ADAABAAEAAAAIAA8ADAABAAEAAAAJAA8ADAABAAEAAAAKAA8ADAABAAEAAAALAA8ADAABAAEAAAAMAA8ADAABAAEAAAANAA8ADAABAAEAAAAOAA8ADAABAAEAAAAPAA8ADAABAAEAAAAQAA8ADAABAAEAAAARAA8ADAABAAEAAAASAA8ADAABAAEAAAATAA8ADAABAAEAAAADAAMAEAAAAAAAAAAEAAMAEAAAAAAAAAADAAQAEAAAAAAAAAA=")
tile_set = ExtResource("3_8p2v0")

[node name="Stones" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAMAAkADgAAAAAAAAANAAkADgAAAAAAAAAOAAkADgAAAAAAAAAGAAgADgAAAAAAAAAHAAgADgAAAAAAAAAIAAgADgAAAAAAAAAJAAgADgAAAAAAAAAKAAgADgAAAAAAAAALAAgADgAAAAAAAAAMAAgADgAAAAAAAAANAAgADgAAAAAAAAAOAAgADgAAAAAAAAAAAAEADgAAAAAAAAABAAEADgAAAAAAAAACAAEADgAAAAAAAAAEAAEADgAAAAAAAAAFAAEADgAAAAAAAAADAAEADgAAAAAAAAAOAAcADgAAAAAAAAAOAAYADgAAAAAAAAAOAAUADgAAAAAAAAAOAAMADgAAAAAAAAAOAAIADgAAAAAAAAANAAEADgAAAAAAAAANAAAADgAAAAAAAAAOAAAADgAAAAAAAAAOAAEADgAAAAAAAAAOAAQADgAAAAAAAAAHAAEADgAAAAAAAAAIAAEADgAAAAAAAAAKAAEADgAAAAAAAAALAAEADgAAAAAAAAAJAAEADgAAAAAAAAAMAAEADgAAAAAAAAAGAAEADgAAAAAAAAAAAAgADgAAAAAAAAABAAgADgAAAAAAAAAEAAgADgAAAAAAAAAFAAgADgAAAAAAAAAAAAIADgAAAAAAAAAAAAMADgAAAAAAAAAAAAQADgAAAAAAAAAAAAcADgAAAAAAAAAAAAYADgAAAAAAAAAAAAUADgAAAAAAAAABAAkADgAAAAAAAAAEAAkADgAAAAAAAAAFAAkADgAAAAAAAAAGAAkADgAAAAAAAAAHAAkADgAAAAAAAAAIAAkADgAAAAAAAAAJAAkADgAAAAAAAAAKAAkADgAAAAAAAAALAAkADgAAAAAAAAAAAAAADgAAAAAAAAABAAAADgAAAAAAAAACAAAADgAAAAAAAAADAAAADgAAAAAAAAAEAAAADgAAAAAAAAAFAAAADgAAAAAAAAAGAAAADgAAAAAAAAAHAAAADgAAAAAAAAAIAAAADgAAAAAAAAAJAAAADgAAAAAAAAAKAAAADgAAAAAAAAALAAAADgAAAAAAAAAMAAAADgAAAAAAAAAEAAoADgAAAAAAAAAEAAsADgAAAAAAAAAEAAwADgAAAAAAAAAEAA0ADgAAAAAAAAABAAoADgAAAAAAAAABAAsADgAAAAAAAAABAAwADgAAAAAAAAABAA0ADgAAAAAAAAA=")
tile_set = ExtResource("3_8p2v0")

[node name="Axon" type="TileMapLayer" parent="TileMapLayers"]
tile_set = SubResource("TileSet_htxr6")

[node name="OnTheGround" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="OnTheGround" instance=ExtResource("4_56ds5")]
position = Vector2(91, 515)

[node name="ThrowingNPC" parent="OnTheGround" instance=ExtResource("5_kukhv")]
visible = false
position = Vector2(2278, 1111)

[node name="Target" parent="OnTheGround" instance=ExtResource("6_m74a1")]
visible = false
position = Vector2(217, 416)
sprite_frames = ExtResource("7_5ums6")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target2" parent="OnTheGround" instance=ExtResource("6_m74a1")]
visible = false
position = Vector2(784, 202)
sprite_frames = ExtResource("7_5ums6")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target3" parent="OnTheGround" instance=ExtResource("6_m74a1")]
visible = false
position = Vector2(801, 395)
sprite_frames = ExtResource("7_5ums6")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target4" parent="OnTheGround" instance=ExtResource("6_m74a1")]
visible = false
position = Vector2(632, 497)
sprite_frames = ExtResource("7_5ums6")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target5" parent="OnTheGround" instance=ExtResource("6_m74a1")]
visible = false
position = Vector2(513, 233)
sprite_frames = ExtResource("7_5ums6")
label = ""
color = Color(1, 1, 1, 1)

[node name="Target6" parent="OnTheGround" instance=ExtResource("6_m74a1")]
visible = false
position = Vector2(382, 426)
sprite_frames = ExtResource("7_5ums6")
label = ""
color = Color(1, 1, 1, 1)

[node name="CollectibleItem" parent="OnTheGround" instance=ExtResource("8_54xi1")]
unique_name_in_owner = true
position = Vector2(484, 461)
revealed = false
next_scene = "uid://x3wm2ce0ax8i"
item = SubResource("Resource_a51xm")
collected_dialogue = ExtResource("2_qr65d")
dialogue_title = &"well_done"

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="." instance=ExtResource("10_7afs2")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.333, 1.333)
limit_left = 0
limit_top = 0
limit_right = 2048
limit_bottom = 2048
position_smoothing_enabled = true
editor_draw_limits = true

[node name="Signal" type="Node2D" parent="."]
script = ExtResource("12_htxr6")

[node name="Sprite2D" type="Sprite2D" parent="Signal"]
position = Vector2(-17, 2)
scale = Vector2(0.757813, 0.828125)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Signal"]
position = Vector2(-18, 0)
shape = SubResource("CircleShape2D_nig86")
one_way_collision_margin = 0.0

[node name="Projectile" type="Node2D" parent="."]
visible = false

[node name="Neuron1" type="TextureButton" parent="."]
offset_left = 252.0
offset_top = 242.0
offset_right = 316.0
offset_bottom = 306.0
texture_normal = ExtResource("20_nd32y")
texture_pressed = ExtResource("21_fs2xd")

[node name="Neuron2" type="TextureButton" parent="."]
offset_left = 387.0
offset_top = 244.0
offset_right = 459.0
offset_bottom = 316.0
texture_normal = ExtResource("20_nd32y")
texture_pressed = ExtResource("21_fs2xd")

[node name="Neuron3" type="TextureButton" parent="."]
offset_left = 523.0
offset_top = 248.0
offset_right = 595.0
offset_bottom = 312.0
texture_normal = ExtResource("20_nd32y")
texture_pressed = ExtResource("21_fs2xd")

[node name="Neuron4" type="TextureButton" parent="."]
offset_left = 638.0
offset_top = 247.0
offset_right = 710.0
offset_bottom = 319.0
texture_normal = ExtResource("20_nd32y")
texture_pressed = ExtResource("21_fs2xd")

[node name="Decoration" type="Node2D" parent="."]
script = ExtResource("22_r35tm")
metadata/_custom_type_script = "uid://diknsuw3mtj1n"

[node name="Sprite2D" type="Sprite2D" parent="Decoration"]
position = Vector2(107, 475)
texture = ExtResource("23_tmgji")

[node name="Sprite2D2" type="Sprite2D" parent="Decoration"]
position = Vector2(325, 479)
texture = ExtResource("24_baejh")
